--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
-    "nuxt": "^3.5.2",
-    "typescript": "^5.1.3",
-    "vitest": "^0.32.2"
+    "nuxt": "^3.5.2"
   }
 }
