--- a/package.json
+++ b/package.json
@@ -9,8 +9,26 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.5",
     "@nuxt/devtools": "latest",
+    "@pinia/nuxt": "^0.4.11",
+    "@types/mockjs": "^1.0.7",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "@types/uuid": "^9.0.2",
+    "@unocss/nuxt": "^0.53.1",
+    "@vueuse/nuxt": "^10.2.0",
+    "nuxt": "^3.5.2",
+    "nuxt-lodash": "^2.4.1",
+    "sass": "^1.63.5",
+    "sass-loader": "^13.3.2"
+  },
+  "dependencies": {
+    "element-plus": "^2.3.7",
+    "mockjs": "^1.1.0",
+    "msw": "^1.2.2",
+    "normalize.css": "^8.0.1",
+    "nuxt-icon": "^0.4.1",
+    "pinia": "^2.1.4",
+    "uuid": "^9.0.0"
   }
 }
